# Tech_Trend_Analyser

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/app/: database.py  main.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  mockData.js
frontend/src/components/: About.jsx  About.tsx  Archive.jsx  Archive.tsx  Card.jsx  Card.tsx  ContentContainer.jsx  Dashboard.jsx  Dashboard.tsx  Footer.jsx  Footer.tsx  Navbar.jsx  Navbar.tsx
workers/ai_agents/: crew.py  main.py
workers/ai_agents/config/: agents.yaml  tasks.yaml
workers/pipeline/: backfill.py  run_crew.py  scorer.py
workers/scraper/: reader.py  scraper.py
