[project]
name = "tech-trend-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]==1.10.1",
    "fastapi>=0.136.3",
    "requests>=2.32.5,<2.33.dev0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
